# ariafin

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/af-api/: Cargo.toml
crates/af-api/src/: error.rs  lib.rs  server_trait.rs
crates/af-api/src/jellyfin/: auth.rs  impl_trait.rs  library.rs  mod.rs  models.rs  stream.rs
crates/af-audio/: Cargo.toml
crates/af-audio/src/: lib.rs
crates/af-cli/: Cargo.toml
crates/af-cli/src/: main.rs
crates/af-core/: Cargo.toml
crates/af-core/src/: error.rs  events.rs  lib.rs
crates/af-core/src/cache/: db.rs  mod.rs
crates/af-core/src/config/: loader.rs  mod.rs  schema.rs
crates/af-core/src/secrets/: mod.rs
crates/af-core/src/types/: album.rs  artist.rs  mod.rs  playback.rs  playlist.rs  server.rs  track.rs
crates/af-daemon/: Cargo.toml
crates/af-daemon/src/: lib.rs
crates/af-tui/: Cargo.toml
crates/af-tui/src/: app.rs  input.rs  lib.rs  state.rs  theme.rs  widgets.rs
crates/af-tui/src/app/: events.rs  mod.rs  render.rs  runner.rs
docs/superpowers/specs/: 2026-04-26-app-split-design.md
