[package]
name        = "af-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ariafin"
path = "src/main.rs"

[dependencies]
af-core    = { workspace = true }
af-tui     = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
dirs       = { workspace = true }
